--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,8 +47,7 @@ Imports:
     BiocStyle,
     rmarkdown,
     foreach,
-    coda,
-    raster
+    coda
 Suggests:
     flowWorkspace (>= 3.33.1),
     flowCore,
